# 2D-DSC

./: .gitignore  CMakeLists.txt  LICENSE  README.md
DEMO/: average_function.cpp  average_function.h  draw.cpp  draw.h  log.cpp  log.h  normal_function.cpp  normal_function.h  rotate_function.cpp  rotate_function.h  sample.cpp  user_interface.cpp  user_interface.h
DSC.xcodeproj/: project.pbxproj
DSC.xcodeproj/project.xcworkspace/xcshareddata/: DSC.xccheckout
DSC.xcodeproj/project.xcworkspace/xcuserdata/tuannt8.xcuserdatad/: UserInterfaceState.xcuserstate
DSC.xcodeproj/xcuserdata/tuannt8.xcuserdatad/xcschemes/: DSC.xcscheme  xcschememanagement.plist
LOG/delta25_nu10_alpha5_test0005/: log.txt
LOG/delta25_nu10_alpha5_test0006/: log.txt
LOG/delta25_nu10_alpha5_test0007/: log.txt
LOG/delta25_nu10_alpha5_test0008/: log.txt
LOG/delta25_nu10_alpha5_test0434/: log.txt
LOG/delta25_nu10_alpha5_test0435/: log.txt
LOG/delta25_nu10_alpha5_test0436/: log.txt
src/: DSC.cpp  DSC.h  boundary_conditions.cpp  boundary_conditions.h  design_domain.cpp  design_domain.h  draw.cpp  draw.h  log.cpp  log.h  object_generator.cpp  object_generator.h  trializer.cpp  trializer.h  util.h  velocity_function.cpp  velocity_function.h
